new features: - document_type: Incoming_Invoice replaces the existing 'purchase'. - Add new App: API

--- a/app/admin/template/_default/layout.base.twig
+++ b/app/admin/template/_default/layout.base.twig
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="/style.css" type="text/css" media="handheld, all">
 
-	<script type="text/javascript" src="/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/moment/min/moment.min.js"></script>
 	<script type="text/javascript" src="/tigron-confirm-modal/js/bootstrap.confirm-modal.js"></script>
@@ -22,7 +22,7 @@
 	<script type="text/javascript" src="/jquery-zoom/jquery.zoom.min.js"></script>
 	<script type="text/javascript" src="/handlebars/handlebars.min.js"></script>
 	<script type="text/javascript" src="/bootstrap-multiselect/dist/js/bootstrap-multiselect.js"></script>
-	<script type="text/javascript" src="/jquery.autogrow-textarea/jquery.autogrow-textarea.js"></script>
+	<script type="text/javascript" src="/autogrow-textarea/jquery.autogrowtextarea.min.js"></script>
 	<script type="text/javascript" src="/jquery-ui/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="/bootstrap-checkbox/js/bootstrap-checkbox.js"></script>
 
