--- a/app/admin/template/_default/nav_bar.twig
+++ b/app/admin/template/_default/nav_bar.twig
@@ -46,6 +46,7 @@
 						<li {% if env.module.get_name() == 'setting_configuration' %}class="active"{% endif %}><a href="/setting/configuration">{% trans "Configuration" %}</a></li>
 						<li {% if env.module.get_name() == 'setting_company' %}class="active"{% endif %}><a href="/setting/company">{% trans "Company" %}</a></li>
 						<li {% if env.module.get_name() == 'setting_mailscanner' %}class="active"{% endif %}><a href="/setting/mailscanner">{% trans "Mailscanner" %}</a></li>
+						<li {% if env.module.get_name() == 'setting_api' %}class="active"{% endif %}><a href="/setting/api">{% trans "Api settings" %}</a></li>
 					</ul>
 				</li>
 			</ul>
