--- a/app/admin/template/administrative/incoming.twig
+++ b/app/admin/template/administrative/incoming.twig
@@ -1,181 +1,7 @@
 {% extends "_default/layout.base.twig" %}
 
 {% block content %}
-	{% if action == 'merge' or action == 'add' %}
-		<ol class="breadcrumb">
-			<li><a href="/">{% trans "Home" %}</a></li>
-			<li><a href="/administrative/incoming">{% trans "Incoming" %}</a></li>
-			<li><a href="/administrative/incoming?action=edit&id={{ incoming.id }}">{% trans "Edit incoming" %}</a></li>
-			<li class="active">{% trans "Merge pages" %}</li>
-		</ol>
-
-		{% if errors is defined %}
-			<div class="alert alert-danger">
-				{% trans "The form contains mistakes. Please correct them." %}
-			</div>
-		{% endif %}
-
-		<form class="form form-horizontal form-condensed" method="post" action="/administrative/incoming?action=add&id={{ incoming.id }}">
-
-			<div class="panel panel-default">
-				<div class="panel-body">
-
-					<div class="form-group{% if 'title' in errors|keys %} has-error{% endif %}">
-						<label for="title" class="col-xs-3 control-label">{% trans "Title" %}</label>
-						<div class="col-xs-9">
-							<input type="text" name="document[title]" id="title" class="form-control" value="{{ env.post.document.title }}">
-							{{ form.invalid_input('title', errors) }}
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Tags" %}</label>
-						<div class="col-xs-9">
-							<input type="text" class="form-control" name="tag_ids" id="autocomplete-tag" value="" />
-						</div>
-					</div>
-
-					{% for incoming_page in incoming_pages %}
-						<input type="hidden" name="incoming_page_ids[]" value="{{ incoming_page.id }}" />
-					{% endfor %}
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Create purchase" %}</label>
-						<div class="col-xs-9">
-							<input type="checkbox" name="create_purchase" id="create_purchase" data-group-cls="btn-group-sm" onchange="toggle_purchase()" {% if env.post.create_purchase %}checked{% endif %}/>
-						</div>
-					</div>
-
-					<div id="purchase_form" class="hide">
-
-						<div class="form-group{% if 'supplier_id' in errors|keys %} has-error{% endif %}">
-							<label class="col-xs-3 control-label">{% trans "Supplier" %}</label>
-							<div class="col-xs-9">
-								<input type="text" id="autocomplete_supplier" name="supplier" class="form-control typeahead" value="{{ supplier.company }}" placeholder="{% trans "Search supplier" %}...">
-								<input type="hidden" id="supplier_id" name="purchase[supplier_id]" value="{{ supplier.id }}">
-								{{ form.invalid_input('supplier_id', errors) }}
-							</div>
-						</div>
-
-						<div class="form-group {% if 'price_excl' in errors|keys %}has-error{% endif %}">
-							<label class="col-xs-3 control-label">{% trans "Price (excl)" %}</label>
-							<div class="col-xs-9">
-								<div class="input-group">
-									<span class="input-group-addon">&euro;</span>
-									<input type="text" name="purchase[price_excl]" class="form-control" value="{{ env.post.purchase.price_excl }}"/>
-								</div>
-								{{ form.invalid_input('price_excl', errors) }}
-							</div>
-						</div>
-
-						<div class="form-group {% if 'price_incl' in errors|keys %}has-error{% endif %}">
-							<label class="col-xs-3 control-label">{% trans "Price (incl)" %}</label>
-							<div class="col-xs-9">
-								<div class="input-group">
-									<span class="input-group-addon">&euro;</span>
-									<input type="text" name="purchase[price_incl]" class="form-control" value="{{ env.post.purchase.price_incl }}"/>
-								</div>
-								{{ form.invalid_input('price_incl', errors) }}
-							</div>
-						</div>
-
-						<div class="form-group">
-							<label class="col-xs-3 control-label">{% trans "Date" %}</label>
-							<div class="col-xs-5">
-								<input type="text" class="form-control datepicker" name="purchase[date]" value="{{ "now"|date }}">
-							</div>
-						</div>
-
-						<div class="form-group">
-							<label class="col-xs-3 control-label">{% trans "Expiration Data" %}</label>
-							<div class="col-xs-5">
-								<input type="text" class="form-control datepicker" name="purchase[expiration_date]" value="{{ "+1 month"|date }}">
-							</div>
-						</div>
-
-
-					</div>
-
-					<div class="form-group">
-						<div class="col-xs-3 col-xs-offset-3">
-							<button class="btn btn-primary">
-								{% trans "Save" %}
-							</button>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</form>
-
-		<script type="text/javascript" src="/bootstrap-tokenfield.min.js"></script>
-		<script type="text/javascript" src="/bloodhound.min.js"></script>
-		<script type="text/javascript" src="/typeahead.min.js"></script>
-		<script type="text/javascript">
-
-			/**
-			 * Tags tokenfield
-			 */
-			var tags = new Bloodhound({
-				datumTokenizer: Bloodhound.tokenizers.obj.whitespace('value'),
-				queryTokenizer: Bloodhound.tokenizers.whitespace,
-				remote: '/administrative/tag?action=ajax_search&search=%QUERY'
-			});
-
-			tags.initialize();
-
-			$('#autocomplete-tag').tokenfield({
-				typeahead: [null, { source: tags.ttAdapter(), displayKey: 'label' }]
-			});
-
-			$('#autocomplete-tag').tokenfield('setTokens', [{% for selected_tag in selected_tags %}{ value: "{{ selected_tag.id }}", label: "{{ selected_tag.name }}" }{% if not loop.last %},{% endif %}{% endfor %}]);
-
-			$('#autocomplete-tag').on('tokenfield:createtoken', function(e) {
-				if (e.attrs['value'] == e.attrs['label']) {
-					return false;
-				}
-			});
-
-			/**
-			 * Supplier autocomplete
-			 */
-			var suppliers = new Bloodhound({
-				datumTokenizer: Bloodhound.tokenizers.obj.whitespace('value'),
-				queryTokenizer: Bloodhound.tokenizers.whitespace,
-				remote: '/administrative/supplier?action=ajax_search&search=%QUERY'
-			});
-
-			suppliers.initialize();
-
-			$('#autocomplete_supplier').typeahead({
-				hint: true,
-				highlight: true,
-				minLength: 2
-			},{
-				name:	'supplier',
-				displayKey: 'value',
-				source:	suppliers.ttAdapter()
-			});
-			$('#autocomplete_supplier').on('typeahead:selected typeahead:autocompleted', function(e,data) {
-				$('#supplier_id').val(data.id);
-			});
-
-			toggle_purchase();
-
-			function toggle_purchase() {
-				if ( $('#create_purchase').prop('checked') ) {
-					$('#purchase_form').removeClass('hide');
-					console.log('on');
-				} else {
-					$('#purchase_form').addClass('hide');
-					console.log('off');
-				}
-
-			}
-
-		</script>
-
-	{% elseif action == 'edit' %}
+	{% if action == 'edit' %}
 		<ol class="breadcrumb">
 			<li><a href="/">{% trans "Home" %}</a></li>
 			<li><a href="/administrative/incoming">{% trans "Incoming" %}</a></li>
