--- a/app/admin/template/administrative/tag.twig
+++ b/app/admin/template/administrative/tag.twig
@@ -66,13 +66,21 @@
 
 	{% include "administrative/tag/new.twig" with {"id": "new_tag"} %}
 
-	{% for tag in pager.items %}
-		{% if loop.first %}
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				{{ base.pager_count(pager.item_count) }}
+
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<div class="pull-right">
+				<a href="#new_tag" data-toggle="modal">
+					<span class="glyphicon glyphicon-plus-sign"></span>
+					{% trans "Add tag" %}
+				</a>
 			</div>
-			<div class="panel-body">
+
+			{{ base.pager_count(pager.item_count) }}
+		</div>
+		<div class="panel-body">
+			{% for tag in pager.items %}
+				{% if loop.first %}
 				<table class="table table-striped table-hover table-condensed">
 					<thead>
 						<tr>
@@ -82,34 +90,34 @@
 						</tr>
 					</thead>
 					<tbody>
-		{% endif %}
-		<tr>
-			<td>{{ tag.name }}</td>
+				{% endif %}
+				<tr>
+					<td>{{ tag.name }}</td>
 
-			<td>
-				<a href="/administrative/tag?id={{ tag.id }}&action=edit">
-					<span class="glyphicon glyphicon-pencil"></span>
-				</a>
-			</td>
-			<td>
-				<a href="/administrative/tag?id={{ tag.id }}&action=delete" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure" %}?">
-					<span class="glyphicon glyphicon-remove" />
-				</a>
-			</td>
-		</tr>
+					<td>
+						<a href="/administrative/tag?id={{ tag.id }}&action=edit">
+							<span class="glyphicon glyphicon-pencil"></span>
+						</a>
+					</td>
+					<td>
+						<a href="/administrative/tag?id={{ tag.id }}&action=delete" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure" %}?">
+							<span class="glyphicon glyphicon-remove" />
+						</a>
+					</td>
+				</tr>
 
-		{% if loop.last %}
+				{% if loop.last %}
 					</tbody>
 				</table>
-
 				{{ pager.links|raw }}
-			</div>
-		</div>
-		{% endif %}
-	{% else %}
-			<p><em>{% trans "No tags found." %}</em></p>
-	{% endfor %}
+				{% endif %}
+			{% else %}
 
+				<p><em>{% trans "No customers found." %}</em></p>
+
+			{% endfor %}
+		</div>
+	</div>
 
 {% endif %}
 
