--- a/app/admin/template/_default/nav_bar.twig
+++ b/app/admin/template/_default/nav_bar.twig
@@ -31,8 +31,11 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Document Management" %} <b class="caret"></b></a>
 					<ul class="dropdown-menu">
+						<li class="dropdown-header">{% trans "Documents" %}</li>
+						<li {% if env.module.get_name() == 'administrative_document' %}class="active"{% endif %}><a href="/administrative/document">{% trans "All Documents" %}</a></li>
+						<li {% if env.module.get_name() == 'administrative_document_invoice' %}class="active"{% endif %}><a href="/administrative/document/invoice">&#8627; {% trans "Incoming Invoices" %}</a></li>
+						<li role="separator" class="divider"></li>
 						<li {% if env.module.get_name() == 'administrative_incoming' %}class="active"{% endif %}><a href="/administrative/incoming">{% trans "Incoming" %}</a></li>
-						<li {% if env.module.get_name() == 'administrative_document' %}class="active"{% endif %}><a href="/administrative/document">{% trans "Documents" %}</a></li>
 						<li {% if env.module.get_name() == 'administrative_tag' %}class="active"{% endif %}><a href="/administrative/tag">{% trans "Tags" %}</a></li>
 					</ul>
 				</li>
